fixed white space

--- a/app/globals.css
+++ b/app/globals.css
@@ -26,21 +26,17 @@
 * {
   scroll-behavior: smooth;
 }
-html,
-body {
-  overflow: hidden;
-  height: 100dvh;
-  margin: 0;
-}
+
 body {
   font-family: var(--font-sans-serif);
   font-weight: 400;
 }
 
-/* html body[data-scroll-locked] {
-  overflow: visible !important;
+
+html body[data-scroll-locked] {
+  overflow: hidden !important;
   margin-right: 0 !important;
-} */
+}
 
 ::-webkit-scrollbar {
   width: 27px;
